fix(Header): align header to .info

--- a/assets/css/modules/_header.scss
+++ b/assets/css/modules/_header.scss
@@ -50,7 +50,7 @@
 
 .navbar-left {
   @media (min-width: 768px) {
-    margin-left: 50px;
+    margin-left: 26px;
   }
 }
 
